HREPTWO-2723: IE takes too much cpu http://issues.onehippo.com/browse/HREPTWO-2723
- Experimental

svn path=/hippo-ecm/trunk/; revision=18493

--- a/repository/package/skin/src/main/webapp/screen.css
+++ b/repository/package/skin/src/main/webapp/screen.css
@@ -754,7 +754,7 @@ font-weight: bold;
 .hippo-editor-template-editor .odd .hippo-editor-field{background: #cee3f9}
 .hippo-editor {background: transparent url("images/hippo-shade.png")}
 /* field styling */
-.hippo-editor-field{padding: 8px; margin-bottom: 0px; position: static;}
+.hippo-editor-field{padding: 8px; margin-bottom: 0px; }
 .hippo-editor-field-title{font-size: 11px; font-weight: bold; color: #666666; margin-bottom: 8px;}
 
 /* Text Input elements */
@@ -836,7 +836,7 @@ background-image:url("images/icons/workflow-16.png"); background-repeat: no-repe
 
 
 /* sub sub fields */
-.hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield{background-color: white; border: none; width: 100%; margin-bottom: 4px; position: relative}
+.hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield{background-color: white; border: none; width: auto; margin-bottom: 4px; position: static;}
 .hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield .hippo-editor-field-subfield{background-color: transparent; border: 1px solid #b2b2b2;}
 .hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield .add-16{}
 .hippo-editor .hippo-editor-field .hippo-editor-field-subfield .hippo-editor-field-subfield .add-16:hover{border: 1px solid #EDF5FF; background-color: white}
